@@ -1297,6 +1297,8 @@ tld {
 	motd &lt;motd-file&gt;;
 	rules &lt;rules-file&gt;;
 	shortmotd &lt;shortmotd-file&gt;;
+	opermotd &lt;opermotd-file&gt;;
+	botmotd &lt;botmotd-file&gt;;
 	channel &lt;channel-name&gt;;
 	options {
 		ssl;
@@ -1305,11 +1307,12 @@ tld {
 <p>The tld block allows you to specify a motd, rules, and channel for a user based 
   on their host. This is useful if you want different motds for different languages. 
   The <b>tld::mask</b> is a user@host mask that the user's username and hostname must 
-  match. The <b>tld::motd</b>, <b>tld::shortmotd</b>, and <b>tld::rules</b> specify the 
-  motd, shortmotd, and rules file, respectively, to be displayed to this hostmask. 
-  The tld::shortmotd is optional. <b>tld::channel</b> is optional, it allows 
-  you to specify a channel that this user will be forced to join on connect. If 
-  this exists it will override the default auto join channel.
+  match. The <b>tld::motd</b>, <b>tld::shortmotd</b>, <b>tld::opermotd</b>, 
+  <b>tld::botmotd</b>, and <b>tld::rules</b> specify the motd, shortmotd, opermotd,
+  botmotd, and rules file, respectively, to be displayed to this hostmask. 
+  The tld::shortmotd, tld::opermotd, and tld::botmotd are optional. <b>tld::channel</b> 
+  is optional as well, it allows you to specify a channel that this user will be forced
+  to join on connect. If this exists it will override the default auto join channel.
   The <b>tld::options</b> block allows you to define additional requirements,
   currently only tld::options::ssl which only displays the file for SSL users, and
   tld::options::remote which only displays the file for remote users, exists.</p>
